--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,5 +1,7 @@
 annotated-types==0.7.0
 anyio==4.9.0
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
 colorama==0.4.6
 fastapi==0.115.12
@@ -15,10 +17,12 @@ pydantic==2.11.4
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
 pytz==2025.2
+requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
+urllib3==2.4.0
 uvicorn==0.34.2
