--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,22 @@ charset-normalizer==3.4.2
 click==8.1.8
 clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1
 colorama==0.4.6
+distro==1.9.0
 fastapi==0.115.12
 filelock==3.18.0
 fsspec==2025.5.1
 ftfy==6.3.1
 h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+jiter==0.10.0
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.5
 numpy==2.2.5
+openai==1.84.0
 packaging==25.0
 pandas==2.2.3
 pgvector==0.4.1
