--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ psycopg2-binary==2.9.10
 pydantic==2.11.4
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 pytz==2025.2
 regex==2024.11.6
 requests==2.32.3
