--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.1
 MarkupSafe==3.0.2
 mpmath==1.3.0
 networkx==3.5
@@ -33,11 +34,14 @@ python-dotenv==1.1.0
 pytz==2025.2
 regex==2024.11.6
 requests==2.32.3
+scikit-learn==1.7.0
+scipy==1.15.3
 setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 starlette==0.46.2
 sympy==1.14.0
+threadpoolctl==3.6.0
 torch==2.7.1
 torchvision==0.22.1
 tqdm==4.67.1
