--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     environment:
       - DATABASE_URL=postgresql://postgres:pass@db:5432/postgres
     restart: unless-stopped
+    env_file: .env
 
   db:
     image: ankane/pgvector:latest
